use line-height to fix chinese and english alignment

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -40,6 +40,7 @@
   border: 1px solid black;  
   font-size: 0.9em;
   height: 2em;
+  line-height: 1.6em;
 }
 
 .categoryOn {
